--- a/reg.html
+++ b/reg.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>register</title>
-    <link rel="stylesheet" href="./styles/reg-style.css">
+    <link rel="stylesheet" href="./reg-style.css">
 </head>
 <body>
     <form action="./action_page.php" method="post">
